Fix broken layout with long word

--- a/src/main/sass/components/_labeled.scss
+++ b/src/main/sass/components/_labeled.scss
@@ -8,6 +8,7 @@
 		color: var(--label-foreground-color);
 		flex: 1;
 		hyphens: auto;
+		overflow: hidden;
 		padding-left: 4px;
 		padding-right: 16px;
 	}
